# NeoShell

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: release.yml
assets/: icon.icns
core/: Cargo.toml
core/src/: app.rs  i18n.rs  lib.rs
core/src/ssh/: mod.rs
core/src/terminal/: mod.rs
core/src/ui/: mod.rs  theme_config.rs
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
scripts/: create-dmg-bg.sh  publish-update.sh
src/: App.tsx  app.rs  index.css  main.rs  sshconfig.rs
src/components/: ConnectionForm.tsx  MainLayout.tsx  MasterPasswordSetup.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx  UnlockScreen.tsx  WelcomeScreen.tsx
src/crypto/: mod.rs
src/ssh/: mod.rs
src/storage/: mod.rs
src/stores/: connectionStore.ts  terminalStore.ts
src/terminal/: mod.rs
src/types/: index.ts
src/ui/: theme.rs
web-next/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-next/src/: App.tsx  main.tsx
web-next/src/components/: AmbientGrid.css  AmbientGrid.tsx  Changelog.css  Changelog.tsx  Contact.css  Contact.tsx  Cursor.css  Cursor.tsx  Download.css  Download.tsx  Features.css  Features.tsx  Footer.css  Footer.tsx  GPUParticles.css  GPUParticles.tsx  Hero.css  Hero.tsx  HeroCanvas.css  HeroCanvas.tsx  Nav.css  Nav.tsx  Security.css  Security.tsx  Stack.css  Stack.tsx
web-next/src/i18n/: context.tsx  en.ts  zh.ts
web-next/src/styles/: globals.css
website/: index.html  neoshell.nginx.conf
